--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,12 @@ matrix:
     - go: tip
 before_install:
   - go get github.com/axw/gocov/gocov
-  - go get github.com/mattn/goveralls
   - go get golang.org/x/tools/cmd/cover
+before_script:
+  - go vet ./...
+  - gofmt -s -l .
+script:
+  - go list -f '{{if len .TestGoFiles}}"go test -coverprofile={{.Dir}}/.coverprofile {{.ImportPath}}"{{end}}' ./... | xargs -I{} sh -c '{}'
+  - gover . coverprofile.txt
+after_success:
+  - bash <(curl -s https://codecov.io/bash) -f coverprofile.txt
